--- a/index.html
+++ b/index.html
@@ -36,7 +36,26 @@
 
     </section>
 
+    <section>
+    <h2>I Rafae Khurram think that a Pterodactyl would win</h2>
 
+    <img src="images/pterodactyl_532f.jpg" alt="picture of Pterodactyl">
+
+    <p><em>In a hypothetical battle</em> between a Brachiosaurus and a Pterodactyl, the odds would <strong>strongly favor the Pterodactyl.</strong>
+        The pterodactyl would have a distinct advantage due to its aerial mobility and agility.</p>
+
+        <p>Pterodactyls, being flying reptiles, could evade the massive and slow-moving brachiosaurus, making it challenging for the brachiosaurus to defend itself. 
+            The pterodactyl could swoop down, peck at the brachiosaurus's vulnerable spots, and engage in hit-and-run tactics, potentially causing harm over time. 
+            The pterodactyl would always have the option of flying to safety and retreating from the battle whereas the brachiosaurus must face whatever threat comes its way. 
+            Overall, I feel that the speed and agility of the pterodactyl trumps the strength and size of a brachiosaurus and the pterodactyl playing its cards right, 
+            would prove to best the brachiosaurus in combat. 
+        </p>
+
+
+
+        <img src="images/6vA8wWskCkUgffN9dbQhvh.jpg" alt="angry Brachiosaurus with description of Brachiosaurus"> 
+
+    </section>
 </body>
 
 </html>
